style.css
@import url('https://fonts.googleapis.com/css2?family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');

html {
    background-color: #111211;
    background-image: radial-gradient(circle, #202020 2px, transparent 2px);
    background-position: 0 0;
    background-size: 22px 22px;

    font-family: "Zilla Slab", serif;
}

/* html::after { */
/*     content: ""; */
/*     position: absolute; */
/*     bottom: 50%; */
/*     left: -5px; */
/*     right: -2px; */
/*     height: 2px; */
/*     background: #f00; */
/* } */


.fade-in {
    animation: fade-in 1s ease-in-out;
    animation-fill-mode: forwards;
}


.main {
    /* background-color: #111211; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* height: 100vh; */
}

.name {
    margin: 0;
    padding: 0;

    position: absolute;
    left: 7%;
    top: 36%;

    display: flex;
    align-items: baseline;
    gap: 30px;

    padding-left: 20px;
    margin-bottom: 25px;

    justify-content: space-between;
}

.name::before {
    content: "";
    position: absolute;
    padding: 0px;
    margin: 0px;

    left: -5px;
    top: -10px;
    bottom: -75px;

    width: 1.5px;
    background: #35593a;
}

.name::after {
    content: "";
    position: absolute;
    left: -5px;
    right: -2px;
    bottom: -6px;
    height: 2px;
    background: #73ab79;
}

.name h1,
.name h2,
.name img {
    margin: 0;
    line-height: 1;
    font-weight: 400;
    text-align: left;
    transition: transform 0.6s ease;
}

.rotate {
    transform: rotateY(360deg);
}

.name h1 {
    font-size: 30px;
    color: #73ab79;
    letter-spacing: 3.0px;
}

.name h2 {
    font-size: 15px;
    color: #aaaaaa;
    letter-spacing: 2.0px;
}

.name img {
    width: 25px;
    margin-left: 400px;
}

.about {
    position: absolute;
    left: 7%;
    padding-left: 20px;
    margin-top: 16px;
    margin-bottom: 20px;

    top: calc(35% + 8px + 2px + 20px + 10px);
}

.about p {
    font-size: 17px;
    color: #555555;
    margin: 0px;
}

#p-interested {
    letter-spacing: 2.0px;
}

#p-info {
    letter-spacing: 1.8px;
}

.hl {
    color: #cccccc;
}


.links::before {
    content: "";
    position: absolute;
    padding: 0px;
    margin: 0px;

    left: -5px;
    top: -10px;
    bottom: -75px;

    width: 1.5px;
    background: #35593a;
}

.links {
    position: absolute;

    left: 7%;
    top: calc(35% + 8px + 2px + 20px + 15%);
    padding-left: 20px;

    display: flex;
    flex-direction: column;

    letter-spacing: 1.5px;
}

.link-row {
    display: grid;
    align-items: center;
    grid-template-columns: 11ch 21ch auto;
    column-gap: 10px;
}

.link-row > * {
    display: block;
    font-size: 18px;
    padding-bottom: 5px;
}

.platform {
    color: #cccccc;
}

.id {
    color: #8a8a8a;
}

.hv-ul {
    position: relative;
    text-decoration: none;
}

.hv-ul::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 4px;
    width: 100%;
    height: 1px;
    background: currentColor;

    transform: scaleX(0);
    transform-origin: left;
    transition: transform 0.3s ease;
}

.hv-ul:hover::after {
    transform: scaleX(1);
}

.links a {
    color: #73ab79;
}

.svg-bottom {
    position: fixed;
    left: 0;
    bottom: 0;

    width: 100%;
    height: 150px;

    pointer-events: none;
    z-index: 0;
}

.svg-bottom svg {
    width: 100%;
    height: 100%;
    display: block;
}

/* footer { */
/*     color: #aaaaaa; */
/**/
/*     position: absolute; */
/*     left: 0; */
/*     bottom: 0; */
/*     width: 100%; */
/*     height: 100px; */
/**/
/*     display: flex; */
/*     align-items: center; */
/*     justify-content: center; */
/**/
/*     pointer-events: none; */
/*     z-index: 0; */
/* } */



@keyframes fade-in {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

